# libmapper-freertos

./: .gitmodules  CMakeLists.txt  README.md  osc.h
src/: CMakeLists.txt  compat.h  ifaddrs.h  osc.cpp  osc.hpp  poll.h  strdup.h
src/compat/: CMakeLists.txt  gai_strerror.c  gethostname.c  getnameinfo.c  ifaddrs.c  strdup.c
src/lo/: CMakeLists.txt  address.c  bundle.c  config.h  lo.h  lo_lowlevel.h  lo_types.h  lo_types_internal.h  message.c  osc.c  send.c  server.c
src/mapper/: CMakeLists.txt  config.h  network.c  thread_data.h
src/mapper/util/: mpr_debug.h
src/netinet/: CMakeLists.txt  in.h  netinet.c
src/zlib/: CMakeLists.txt
